test/testdata/variables/undeclared_access_error_global_defined_after_function_call.lox
fun printX() {
  print x;
}

printX(); // error: 'x' has not been declared
var x = 2;
